# MixupGenerator

./: .gitignore  README.md  pyproject.toml
mixup_generator/: __init__.py  archivist.py  groups_generator.py  logger.py  markup_generator.py  meeting_operations.py  mixup_generator.py  mixup_groups_generator.py  mixup_team.py  mixup_team_member.py  models.py  schemas.py  team.py  team_member.py
mixup_generator/api/: database.db  main.py  meeting_operations.py  models.py  schemas.py
tests/: test_generator.py  test_groups_generator.py  test_markup_generator.py
ui/MixupGenerator/: .prettierrc  README.md  bun.lockb  package-lock.json  package.json
ui/MixupGenerator/src/: app.html
ui/MixupGenerator/src/routes/: +layout.svelte  +page.svelte  AlertBox.svelte  MeetingsTab.svelte  MixupModal.svelte  TeamMemberLink.svelte  TeamsTab.svelte
